# milestone-2

./: CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  FileCacheManager.cpp  FileCacheManager.h  Main.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  Server.cpp  Server.h  Solver.cpp  Solver.h  a.out  log.txt  log_git.txt  main.cpp  try.py
Matrixes and Solutions/Astar/Matrixes/: matrix_1  matrix_2  matrix_5  matrix_6  matrix_7
Matrixes and Solutions/Astar/Solutions/: solution_4  solution_5  solution_8
Matrixes and Solutions/BFS/Matrixes/: matrix_0  matrix_1  matrix_2  matrix_3  matrix_4  matrix_5  matrix_6  matrix_7  matrix_8
Matrixes and Solutions/Matrixes/: matrix_0  matrix_3  matrix_4  matrix_8
Matrixes and Solutions/Solutions/: solution_0  solution_1  solution_2  solution_3  solution_6  solution_7
cache/: CacheManager.h  FileCacheManager.h
clientHandler/: ClientHandler.h  MyClientHandler.cpp  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h
searchable/: Point.cpp  Point.h  Route.h  Searchable.cpp  Searchable.h  State.cpp  State.h  Vertex.cpp  Vertex.h  graph.cpp  graph.h  myPoint.cpp  myPoint.h
server/: Main.cpp  Main.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.h  Server.cpp  Server.h
solution/: Route.cpp  Route.h  Solution.cpp  Solution.h
solver/: A_Star.cpp  A_Star.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h  LineSplitter.cpp  LineSplitter.h  Solver.h  StringReverser.cpp  StringReverser.h
(+45 files in other folders)
